<resources>
    <string name="app_name">Explicit</string>
    <string name="button_website">Open Website</string>
    <string name="button_location">Open Map</string>
    <string name="button_share">Share Text</string>
    <string name="edit_website">http://developer.android.com</string>
    <string name="edit_location">Sekolah Tinggi Teknologi Bandung</string>
    <string name="edit_share">Ini text yang akan dishare</string>
</resources>
