<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- EditText untuk input URL Website -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/website_edit_text"
            android:text="@string/edit_website" />

        <!-- Tombol untuk membuka website -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/open_website_button"
            android:layout_marginBottom="24dp"
            android:text="@string/button_website"/>

        <!-- EditText untuk input lokasi -->
        <EditText
            android:id="@+id/location_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_location"
            android:textSize="20sp" />

        <!-- Tombol untuk membuka lokasi -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location_button"
            android:layout_marginBottom="24dp"
            android:text="@string/button_location" />

        <EditText
            android:id="@+id/share_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_share"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/share_text_button"
            android:layout_marginBottom="24dp"
            android:text="@string/button_share" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
